css/styles.css
* {
    margin: 0;
    padding: 0;
    background-color: lightgray;
    box-sizing: border-box;
}

button {
    width: 50px;
    height: 50px;
    border-radius: 7px;
}

canvas {
    background-color: transparent;
}

.flex-container, .flex-container-col, .sudoku-cell {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
    flex-wrap: wrap;
}

.flex-container-col {
    flex-direction: column;
    gap: 0px;
}

.wrapper {
    height: 100vh;
}

.grid-container {
    display: flex;
    border-top: 1px solid black;
    border-left: 1px solid black;
}

.grid-container:nth-child(4), .grid-container:nth-child(7) {
    border-top: 2px solid darkblue;
}

.bottom-border {
    border-bottom: 1px solid black;
}

.side-container {
    width: 300px;
    padding: 5px;
    align-items: flex-start;
    justify-content: flex-start;
}

.container {
    display: grid;
}

.sudoku-number {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    grid-area: 1 / 1 / 1 / 1;
    background-color: rgb(0, 0, 0, .001);
    pointer-events: all;
}

.sudoku-cell {
    display: grid;
    grid-template-rows: 50px;
    grid-template-columns: 50px;
    text-align: center;
    transition: .1s;
    border-right: 1px solid black;
    color: darkblue;
    font-weight: bold;
    pointer-events: none;
}

.sudoku-cell:nth-child(3), .sudoku-cell:nth-child(6) {
    border-right: 2px solid darkblue;
}

.sudoku-cell:hover {
    cursor: pointer;
    background-color: rgb(128, 128, 240, .7);
}

.selected-cell {
    background-color: rgb(128, 128, 240, .3);
}

.selected-cell-dark {
    background-color: rgb(128, 128, 240, .7);
}

.selected-cell-undo {
    background-color: rgb(128, 128, 240, .85);
}

.modifiable {
    color: black;
    font-weight: normal;
}

.hide {
    display: none;
}

.note-container {
    display: grid;
    grid-area: 1 / 1 / 1 / 1;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas:
        "note-1 note-2 note-3"
        "note-4 note-5 note-6"
        "note-7 note-8 note-9";
    background-color: rgba(0, 0, 0, 0);
}

.note-container > div {
    font-size: 10.5px;
    background-color: rgba(0, 0, 0, 0);
    color: black;
}

.note-1 {
    grid-area: note-1;
}

.note-2 {
    grid-area: note-2;
}

.note-3 {
    grid-area: note-3;
}

.note-4 {
    grid-area: note-4;
}

.note-5 {
    grid-area: note-5;
}

.note-6 {
    grid-area: note-6;
}

.note-7 {
    grid-area: note-7;
}

.note-8 {
    grid-area: note-8;
}

.note-9 {
    grid-area: note-9;
}

.error {
    color: red;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    background-color: rgba(0,0,0,.4);
    width: 100%;
    height: 100%;
}

.modal-content {
    top: 50%;
    left: 50%;
    position: fixed;
    padding: 25px;
    width: 250px;
    height: 250px;
    animation-name: fromtop;
    animation-duration: .75s;
    transform: translate(-50%, -50%);
    border-radius: 15px;
}

.close {
    float: right;
    cursor: pointer; 
}

.keypad {
    display: flex;
    flex-wrap: wrap;
    gap: 5px 5px;
    width: 200px;
}

.keypad-key {
    width: 50px;
    height: 40px;
}

@keyframes fromtop {
    from {top: -50%; opacity: 0;}
    to {top: 50%; opacity: 1;}
}

@media screen and (max-width: 800px) {
    #main-container {
        flex-direction: column;
    }

    .flex-container {
        flex-wrap: wrap;
    }

    .wrapper {
        margin-top: 5px;
        height: auto;
    }

    #settings {
        width: 70%;
    }

    .sudoku-cell {
        grid-template-rows: 40px;
        grid-template-columns: 40px;
    }

    .note-container > div {
        font-size: 9px
    }

    .side-container {
        width: 100%;
        height: 100%;
    }

    .keypad {
        width: 170px;
    }
}

